--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Merriweather:400,400i,700,700i,900,900i&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" />
     <link rel="stylesheet" href="style.css">
     <title>Portfolio</title>
 </head>
@@ -61,7 +62,7 @@
 
 
         <section id="skills">
-            
+
             <ul>
                 <li>Wordpress</li>
                 <li>Html</li>
@@ -78,7 +79,12 @@
         </section>
 
         <section id="contact">
-           <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laboriosam, aperiam.</p>
+            <div class="icon">
+                <i class="fas fa-at"></i>
+                <i class="fas fa-mobile"></i>
+                <i class="fab fa-facebook-square"></i>
+                <i class="fab fa-linkedin"></i>
+            </div>
         </section>
 
     </div>
