--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <ul>
                     <li>Name: Himschoot</li>
                     <li>Prename: Glenn</li>
-                    <li>nationality: Belgium</li>
+                    <li>Nationality: Belgium</li>
                     <li>Born on 09/11/1992</li>
                 </ul>
             </div>
@@ -53,7 +53,7 @@
                 <h2>Work Experiance</h2>
                 <ul>
                     <li>Colruyt van 01/2010 tot 09/2018</li>
-                    <li>Prenium Seeafood van 10/2018 tot 03/2019</li>
+                    <li>Premium Seeafood van 10/2018 tot 03/2019</li>
                     <li>opleiding webdeveloper 06/2019</li>
                 </ul>
             </div>
