--- a/index.html
+++ b/index.html
@@ -80,10 +80,11 @@
 
         <section id="contact">
             <div class="icon">
-                <i class="fas fa-at"></i>
-                <i class="fas fa-mobile"></i>
-                <i class="fab fa-facebook-square"></i>
-                <i class="fab fa-linkedin"></i>
+                <a href=""><i class="fas fa-at"></i></a>
+                <a href=""><i class="fas fa-mobile"></i></a>
+                <a href="https://www.facebook.com/profile.php?id=100009871080957&ref=bookmarks">
+                    <i class="fab fa-facebook-square"></i></a>
+                <a href="https://www.linkedin.com/in/glenn-himschoot-518380192/"><i class="fab fa-linkedin"></i></a>
             </div>
         </section>
 
