--- a/index.html
+++ b/index.html
@@ -80,8 +80,7 @@
 
         <section id="contact">
             <div class="icon">
-                <a href=""><i class="fas fa-at"></i></a>
-                <a href=""><i class="fas fa-mobile"></i></a>
+                <a href="email: himschoot.glenn1992@gmail.com" target="_top"><i class="fas fa-at"></i></a>
                 <a href="https://www.facebook.com/profile.php?id=100009871080957&ref=bookmarks">
                     <i class="fab fa-facebook-square"></i></a>
                 <a href="https://www.linkedin.com/in/glenn-himschoot-518380192/"><i class="fab fa-linkedin"></i></a>
