--- a/index.html
+++ b/index.html
@@ -65,14 +65,14 @@
 
             <ul>
                 <li>Wordpress</li>
-                <li>Html</li>
+                <li>HTML</li>
                 <li>CSS</li>
                 <li>SASS</li>
-                <li>Jquery</li>
+                <li>JQuery</li>
                 <li>Javascript</li>
-                <li>Phyton</li>
+                <li>Phython</li>
                 <li>PHP</li>
-                <li>MySQL</li>
+                <li>MYSQL</li>
                 <li>Bootstrap</li>
             </ul>
 
@@ -80,7 +80,7 @@
 
         <section id="contact">
             <div class="icon">
-                <a href="email: himschoot.glenn1992@gmail.com" target="_top"><i class="fas fa-at"></i></a>
+                <a href="mailto: himschoot.glenn1992@gmail.com" target="_top"><i class="fas fa-at"></i></a>
                 <a href="https://www.facebook.com/profile.php?id=100009871080957&ref=bookmarks">
                     <i class="fab fa-facebook-square"></i></a>
                 <a href="https://www.linkedin.com/in/glenn-himschoot-518380192/"><i class="fab fa-linkedin"></i></a>
