--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         <section id="home">
             <h1>Welcome to my site</h1>
-            <h2>we design awesome stuff for awesome people</h2>
+            <h2>I design awesome stuff for awesome people</h2>
 
         </section>
 
