--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </nav>
 
         <section id="home">
-        
+
             <h1>Welcome to my site</h1>
             <h2>I design awesome stuff for awesome people</h2>
 
@@ -36,8 +36,8 @@
             <div class="list">
                 <h2>Personal</h2>
                 <ul>
-                    <li>Name: Himschoot</li>
-                    <li>Prename: Glenn</li>
+                    <li>Last Name: Himschoot</li>
+                    <li>First name: Glenn</li>
                     <li>Nationality: Belgium</li>
                     <li>Born on 09/11/1992</li>
                 </ul>
@@ -53,9 +53,9 @@
             <div class="list">
                 <h2>Work Experiance</h2>
                 <ul>
-                    <li>Colruyt van 01/2010 tot 09/2018</li>
-                    <li>Premium Seeafood van 10/2018 tot 03/2019</li>
-                    <li>opleiding webdeveloper 06/2019</li>
+                    <li>Colruyt van 01/2010 - 09/2018</li>
+                    <li>Premium Seeafood van 10/2018 - 03/2019</li>
+                    <li>Education webdeveloper 06/2019 - ......</li>
                 </ul>
             </div>
         </section>
