--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <li>SASS</li>
                 <li>JQuery</li>
                 <li>Javascript</li>
-                <li>Phython</li>
+                <li>Python</li>
                 <li>PHP</li>
                 <li>MYSQL</li>
                 <li>Bootstrap</li>
